[gd_scene load_steps=8 format=3 uid="uid://cdrj27u3ygxc0"]

[ext_resource type="Script" uid="uid://bp1k42oqhod6q" path="res://title_screen/main_menu.gd" id="1_cr28v"]
[ext_resource type="PackedScene" uid="uid://c4rbxieydn2a4" path="res://title_screen/wireframe_sub_space.tscn" id="2_rdkjt"]
[ext_resource type="Theme" uid="uid://dgo5di4ew147w" path="res://engine/themes/title_screen.theme" id="4_fk0fn"]
[ext_resource type="FontFile" uid="uid://5muhrw1dex5u" path="res://assets/UI/fonts/Ethnocentric Rg It.otf" id="5_1ihsi"]
[ext_resource type="Script" uid="uid://ck7f1l4fnromj" path="res://title_screen/multi_player_root.gd" id="6_fk0fn"]
[ext_resource type="Theme" uid="uid://cewdeyanue7xi" path="res://engine/themes/mp_lobby_theme.theme" id="6_oqrgu"]

[sub_resource type="ViewportTexture" id="ViewportTexture_dbuyn"]
viewport_path = NodePath("TextureRect/SubViewport")

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_cr28v")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1919.0
offset_bottom = 1086.0
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 10.0
offset_top = 10.0
offset_right = 1930.0
offset_bottom = 1090.0
scale = Vector2(1.0073, 1.0073)
texture = SubResource("ViewportTexture_dbuyn")

[node name="SubViewport" type="SubViewport" parent="TextureRect"]
use_debanding = true
size = Vector2i(1920, 1080)

[node name="WireframeSubSpace" parent="TextureRect/SubViewport" instance=ExtResource("2_rdkjt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.14476, 0, 9.24166)

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
offset_left = 281.0
offset_top = 364.0
offset_right = 731.0
offset_bottom = 814.0
color = Color(0.00784314, 0.00784314, 0.00784314, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect2"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_left = 180.0
offset_top = 8.0
offset_right = -159.0
offset_bottom = 455.0
grow_horizontal = 2
bbcode_enabled = true
text = "[center]SUB ROGUE[/center]"

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -262.0
offset_top = -36.0
offset_right = 288.0
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="ColorRect2/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Start Game"

[node name="Button2" type="Button" parent="ColorRect2/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Start Game"

[node name="Button3" type="Button" parent="ColorRect2/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Start Game"

[node name="TextureButton" type="TextureButton" parent="ColorRect2/VBoxContainer"]
layout_mode = 2

[node name="ColorRect3" type="ColorRect" parent="."]
visible = false
offset_left = 83.0
offset_top = 167.0
offset_right = 722.0
offset_bottom = 971.0
color = Color(0, 0, 0, 1)

[node name="MenuVBox" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 151.0
offset_top = 417.0
offset_right = 507.0
offset_bottom = 762.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="BtnNewGame" type="Button" parent="MenuVBox"]
layout_mode = 2
theme = ExtResource("4_fk0fn")
text = "NEW GAME"

[node name="Button2" type="Button" parent="MenuVBox"]
layout_mode = 2
theme = ExtResource("4_fk0fn")
text = "LOAD GAME"

[node name="MultiplayerButton" type="Button" parent="MenuVBox"]
layout_mode = 2
theme = ExtResource("4_fk0fn")
text = "MULTIPLAYER"

[node name="Button4" type="Button" parent="MenuVBox"]
layout_mode = 2
theme = ExtResource("4_fk0fn")
text = "SETTINGS"

[node name="Button3" type="Button" parent="MenuVBox"]
layout_mode = 2
theme = ExtResource("4_fk0fn")
text = "QUIT"

[node name="TitleLabel" type="RichTextLabel" parent="."]
visible = false
offset_left = 9.0
offset_top = 247.0
offset_right = 642.0
offset_bottom = 363.0
theme_override_fonts/normal_font = ExtResource("5_1ihsi")
theme_override_font_sizes/normal_font_size = 60
bbcode_enabled = true
text = "[center]SUB ROGUE[/center]"

[node name="Label" type="Label" parent="."]
offset_right = 54.0
offset_bottom = 23.0
text = "FPS: 60"

[node name="MultiPlayerRoot" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("6_fk0fn")

[node name="LobbySearchRoot" type="Control" parent="MultiPlayerRoot"]
unique_name_in_owner = true
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LobbySearchBG" type="ColorRect" parent="MultiPlayerRoot/LobbySearchRoot"]
layout_mode = 0
offset_left = 645.0
offset_top = 388.0
offset_right = 1913.0
offset_bottom = 835.0
color = Color(0, 0, 0, 0.792157)

[node name="Host" type="Button" parent="MultiPlayerRoot/LobbySearchRoot/LobbySearchBG"]
layout_mode = 2
offset_left = 910.0
offset_top = 344.0
offset_right = 1266.0
offset_bottom = 397.0
theme = ExtResource("4_fk0fn")
text = "Host"

[node name="Refresh" type="Button" parent="MultiPlayerRoot/LobbySearchRoot/LobbySearchBG"]
layout_mode = 2
offset_left = 910.0
offset_top = 266.0
offset_right = 1266.0
offset_bottom = 319.0
theme = ExtResource("4_fk0fn")
text = "Refresh"

[node name="ScrollContainer" type="ScrollContainer" parent="MultiPlayerRoot/LobbySearchRoot/LobbySearchBG"]
layout_mode = 2
offset_left = 40.0
offset_top = 84.0
offset_right = 948.0
offset_bottom = 420.0
theme = ExtResource("6_oqrgu")
vertical_scroll_mode = 2

[node name="LobbyList" type="VBoxContainer" parent="MultiPlayerRoot/LobbySearchRoot/LobbySearchBG/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Button" type="Button" parent="MultiPlayerRoot/LobbySearchRoot/LobbySearchBG/ScrollContainer/LobbyList"]
layout_mode = 2
text = "Not A Lobby"

[node name="LobbyNameLabel" type="Label" parent="MultiPlayerRoot/LobbySearchRoot/LobbySearchBG"]
layout_mode = 0
offset_left = 41.0
offset_top = 26.0
offset_right = 189.0
offset_bottom = 49.0
theme = ExtResource("4_fk0fn")
text = "Lobby Name"

[node name="LobbyNameLabel2" type="Label" parent="MultiPlayerRoot/LobbySearchRoot/LobbySearchBG"]
layout_mode = 0
offset_left = 362.0
offset_top = 26.0
offset_right = 609.0
offset_bottom = 56.0
theme = ExtResource("4_fk0fn")
text = "Num. Players"

[node name="LobbyNameLabel3" type="Label" parent="MultiPlayerRoot/LobbySearchRoot/LobbySearchBG"]
layout_mode = 0
offset_left = 707.0
offset_top = 26.0
offset_right = 954.0
offset_bottom = 56.0
theme = ExtResource("4_fk0fn")
text = "Private"

[node name="LobbyRoot" type="Control" parent="MultiPlayerRoot"]
unique_name_in_owner = true
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("6_oqrgu")

[node name="ColorRect" type="ColorRect" parent="MultiPlayerRoot/LobbyRoot"]
layout_mode = 1
anchors_preset = -1
anchor_right = 48.6
anchor_bottom = 27.35
offset_right = -0.00012207
color = Color(0, 0, 0, 0.854902)

[node name="Button" type="Button" parent="MultiPlayerRoot/LobbyRoot/ColorRect"]
layout_mode = 0
offset_left = 1617.0
offset_top = 257.0
offset_right = 1855.0
offset_bottom = 379.0
text = "Start Game"

[node name="Button3" type="Button" parent="MultiPlayerRoot/LobbyRoot/ColorRect"]
layout_mode = 0
offset_left = 1617.0
offset_top = 418.0
offset_right = 1855.0
offset_bottom = 540.0
text = "Settings"

[node name="Button2" type="Button" parent="MultiPlayerRoot/LobbyRoot/ColorRect"]
layout_mode = 0
offset_left = 262.0
offset_top = 729.0
offset_right = 500.0
offset_bottom = 851.0
text = "Leave Lobby"

[node name="Label" type="Label" parent="MultiPlayerRoot/LobbyRoot/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1723.0
offset_top = 203.0
offset_right = -88.0
offset_bottom = -868.0
grow_horizontal = 2
grow_vertical = 2
text = "Steam Username"

[node name="Label2" type="Label" parent="MultiPlayerRoot/LobbyRoot/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 574.0
offset_top = 203.0
offset_right = -1188.0
offset_bottom = -868.0
grow_horizontal = 2
grow_vertical = 2
text = "Lobby Name Goes Here"

[node name="Label3" type="Label" parent="MultiPlayerRoot/LobbyRoot/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 262.0
offset_top = 203.0
offset_right = -1500.0
offset_bottom = -868.0
grow_horizontal = 2
grow_vertical = 2
text = "Players"

[node name="LineEdit" type="LineEdit" parent="MultiPlayerRoot/LobbyRoot"]
layout_mode = 0
offset_left = 569.0
offset_top = 820.0
offset_right = 1257.0
offset_bottom = 851.0
placeholder_text = "Write your message here"

[node name="Button" type="Button" parent="MultiPlayerRoot/LobbyRoot/LineEdit"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.968
offset_left = 750.0
offset_top = 1.0
offset_right = 323.0
offset_bottom = 5.992
grow_horizontal = 2
text = "Send message"

[node name="ScrollContainer" type="ScrollContainer" parent="MultiPlayerRoot/LobbyRoot"]
layout_mode = 0
offset_left = 569.0
offset_top = 255.0
offset_right = 1574.0
offset_bottom = 788.0

[node name="VBoxContainer" type="VBoxContainer" parent="MultiPlayerRoot/LobbyRoot"]
clip_contents = true
layout_mode = 0
offset_left = 261.0
offset_top = 257.0
offset_right = 516.0
offset_bottom = 297.0

[node name="RTL" type="RichTextLabel" parent="MultiPlayerRoot/LobbyRoot/VBoxContainer"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
text = "DEBUG - Blunt but Sharp Enough"
scroll_active = false
autowrap_mode = 0

[node name="RTL2" type="RichTextLabel" parent="MultiPlayerRoot/LobbyRoot/VBoxContainer"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
text = "DEBUG - Blunt but Sharp Enough"
scroll_active = false
autowrap_mode = 0

[node name="RTL3" type="RichTextLabel" parent="MultiPlayerRoot/LobbyRoot/VBoxContainer"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
text = "DEBUG - Blunt but Sharp Enough"
scroll_active = false
autowrap_mode = 0

[node name="RTL4" type="RichTextLabel" parent="MultiPlayerRoot/LobbyRoot/VBoxContainer"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
text = "DEBUG - Blunt but Sharp Enough"
scroll_active = false
autowrap_mode = 0

[node name="RTL5" type="RichTextLabel" parent="MultiPlayerRoot/LobbyRoot/VBoxContainer"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
text = "DEBUG - Blunt but Sharp Enough"
scroll_active = false
autowrap_mode = 0

[node name="RTL6" type="RichTextLabel" parent="MultiPlayerRoot/LobbyRoot/VBoxContainer"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
text = "DEBUG - Blunt but Sharp Enough"
scroll_active = false
autowrap_mode = 0

[node name="RTL7" type="RichTextLabel" parent="MultiPlayerRoot/LobbyRoot/VBoxContainer"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
text = "DEBUG - Blunt but Sharp Enough"
scroll_active = false
autowrap_mode = 0

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]

[connection signal="button_up" from="MenuVBox/BtnNewGame" to="." method="_on_btn_new_game_button_up"]
[connection signal="button_up" from="MenuVBox/MultiplayerButton" to="MultiPlayerRoot" method="_on_multiplayer_button_up"]
[connection signal="button_up" from="MultiPlayerRoot/LobbySearchRoot/LobbySearchBG/Host" to="MultiPlayerRoot" method="_on_host_button_up"]
[connection signal="button_up" from="MultiPlayerRoot/LobbySearchRoot/LobbySearchBG/Refresh" to="MultiPlayerRoot" method="_on_refresh_button_up"]
